Code smells and bugs fixed